--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
     <meta charset="UTF-8">
     <title>Flappy Bird</title>
 
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- 为手机做更好的适配：禁止缩放并按设备宽度等比缩放画布 -->
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
     <meta name="author" content="Igor Rozani">
@@ -28,19 +29,20 @@
 	<meta property="og:title" content="Flappy Bird">
 	<meta property="og:description" content="Flappy Bird in Phaser 3">
 	<meta property="og:type" content="website">
-	<meta property="og:image" content="/img/favicon.png">
+	<meta property="og:image" content="img/favicon.png">
 	<meta name="twitter:url" content="https://igorrozani.github.io/flappy-bird">
 	<meta name="twitter:title" content="Flappy Bird">
 	<meta name="twitter:description" content="Flappy Bird in Phaser 3">
-	<meta name="twitter:image" content="/img/favicon.png">
+	<meta name="twitter:image" content="img/favicon.png">
 	<meta name="twitter:card" content="summary">
 
     <link rel="shortcut icon" href="img/favicon.png" type="image/png">
 
-    <link rel="manifest" href="/manifest.json">
+    <link rel="manifest" href="manifest.json">
 
     <link rel="stylesheet" href="css/site.css">
-    <script src="//cdn.jsdelivr.net/npm/phaser@3.15.1/dist/phaser.js" type="text/javascript"></script>
+    <!-- 使用较新的 Phaser 版本，支持 Phaser.Scale.FIT / CENTER_BOTH 等常量 -->
+    <script src="https://cdn.jsdelivr.net/npm/phaser@3.70.0/dist/phaser.js" type="text/javascript"></script>
     <script src="js/game.js" type="text/javascript"></script>
 </head>
 <body>
