--- a/index.html
+++ b/index.html
@@ -39,12 +39,18 @@
     <link rel="shortcut icon" href="img/favicon.png" type="image/png">
 
     <link rel="manifest" href="manifest.json">
-
+    
     <link rel="stylesheet" href="css/site.css">
-    <!-- 使用较新的 Phaser 版本，支持 Phaser.Scale.FIT / CENTER_BOTH 等常量 -->
-    <script src="https://cdn.jsdelivr.net/npm/phaser@3.70.0/dist/phaser.js" type="text/javascript"></script>
-    <script src="js/game.js" type="text/javascript"></script>
 </head>
 <body>
+    <div class="menu" style="display:flex;flex-direction:column;align-items:center;justify-content:center;height:100vh;background:#000;color:#fff;">
+        <h1 style="margin-bottom:24px;">选择游戏</h1>
+        <button style="margin:8px 0;padding:10px 20px;font-size:16px;cursor:pointer;" onclick="location.href='bird.html'">
+            Flappy Bird
+        </button>
+        <button style="margin:8px 0;padding:10px 20px;font-size:16px;cursor:pointer;" onclick="location.href='man-down-100.html'">
+            是男人就下100层
+        </button>
+    </div>
 </body>
 </html>
