multi player support

--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
 <body>
     <div class="menu" style="display:flex;flex-direction:column;align-items:center;justify-content:center;height:100vh;background:#000;color:#fff;">
         <h1 style="margin-bottom:24px;">选择游戏</h1>
-        <button style="margin:8px 0;padding:10px 20px;font-size:16px;cursor:pointer;" onclick="location.href='bird.html'">
+        <!-- <button style="margin:8px 0;padding:10px 20px;font-size:16px;cursor:pointer;" onclick="location.href='bird.html'">
             Flappy Bird
-        </button>
+        </button> -->
         <button style="margin:8px 0;padding:10px 20px;font-size:16px;cursor:pointer;" onclick="location.href='man-down-100.html'">
             是男人就下100层
         </button>
